changed output dir

--- a/01-Table.Rmd
+++ b/01-Table.Rmd
@@ -18,7 +18,8 @@ Get an overview of the variable `maritl` and sort the values:
 
 wage_df %>% 
   count(maritl,
-  sort = TRUE)
+  sort = TRUE) %>% 
+  gt()
 
 ```
 
@@ -27,7 +28,8 @@ Get an overview of the combined variables `maritl` and `education` and sort the 
 ```{r count-two}
 
 wage_df %>% 
-  count(maritl, education)
+  count(maritl, education) %>% 
+  gt()
 
 ```
 
@@ -38,7 +40,8 @@ Obtain the sum of a quantitative variable (`wage`) for the different levels of a
 wage_df %>%  
   count(maritl,
         wt = wage,
-        name = "Sum")
+        name = "Sum") %>% 
+  gt()
 
 ```
 
