--- a/index.Rmd
+++ b/index.Rmd
@@ -15,6 +15,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 
 library(tidyverse)
 library(knitr)
+library(gt)
 #theme_set(theme_classic())
 ```
 
@@ -26,6 +27,7 @@ This book provides an introduction to data exploration in R. To use the code in 
 ```{r}
 library(tidyverse)
 library(skimr)
+library(gt)
 ```
 
 
