--- a/docs/exploration.tex
+++ b/docs/exploration.tex
@@ -140,7 +140,7 @@ This book provides an introduction to data exploration in R. To use the code in 
 \end{Highlighting}
 \end{Shaded}
 
-To illustrate the different data exploration methods, we use the dataset \texttt{wage}, which contains wage and other data for a group of 3000 male workers in the Mid-Atlantic region (\citet{James2000}).
+To illustrate the different data exploration methods, we use the dataset \texttt{wage} from \citet{James2000}, which contains wage and other data for a group of 3000 male workers in the Mid-Atlantic region.
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -204,7 +204,7 @@ In this chapter you will learn how to do some simple data explorations for categ
 \hypertarget{simple-counts}{%
 \section{Simple counts}\label{simple-counts}}
 
-Get an overview of the variable \texttt{maritl} and sort the values:
+Get an overview of the variable \texttt{maritl} and sort the values. We use the package \texttt{gt()} to print nice tables:
 
 \begin{Shaded}
 \begin{Highlighting}[]
