--- a/02-Heatmap.Rmd
+++ b/02-Heatmap.Rmd
@@ -28,6 +28,6 @@ wage_df %>%
   geom_bin2d(binwidth = c(1, 1), alpha = 0.8) +
   theme_classic() + 
   scale_fill_gradient(low = "gray85", high = "steelblue") +
-  labs(fill = "number of\ workers", y = "Education", x = "Job class")
+  labs(fill = "number of \n workers", y = "Education", x = "Job class")
 
 ```
